--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/x-date-pickers": "^7.24.1",
     "@storybook/jest": "^0.2.2",
     "@storybook/testing-library": "^0.2.1",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
