--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,18 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
-    "@storybook/addon-essentials": "^8.5.2",
-    "@storybook/addon-interactions": "^8.5.2",
-    "@storybook/addon-onboarding": "^8.5.2",
-    "@storybook/blocks": "^8.5.2",
-    "@storybook/preset-create-react-app": "^8.5.2",
-    "@storybook/react": "^8.5.2",
-    "@storybook/react-webpack5": "^8.5.2",
-    "@storybook/test": "^8.5.2",
     "eslint-plugin-storybook": "^0.11.2",
     "prop-types": "^15.8.1",
-    "storybook": "^8.5.2",
     "web-vitals": "^4.2.4",
     "webpack": "^5.97.1"
   }
