--- a/package.json
+++ b/package.json
@@ -27,13 +27,6 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest",
-      "plugin:storybook/recommended"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -47,9 +40,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-storybook": "^0.11.2",
     "prop-types": "^15.8.1",
-    "web-vitals": "^4.2.4",
-    "webpack": "^5.97.1"
+    "web-vitals": "^4.2.4"
   }
 }
