--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^4.0.3"
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +39,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "babel-loader": "^8.1.0",
     "prop-types": "^15.8.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
   }
 }
