--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^3.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/lab": "^6.0.0-beta.25",
     "@mui/material": "^6.4.2",
     "@mui/system": "^6.4.2",
-    "@mui/x-date-pickers": "^7.24.1",
+    "@mui/x-date-pickers": "^7.25.0",
+    "@mui/x-date-pickers-pro": "^7.25.0",
     "@storybook/jest": "^0.2.2",
     "@storybook/testing-library": "^0.2.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
