--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^3.2.0",
+    "@date-io/date-fns": "^2.16.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
@@ -16,9 +16,10 @@
     "@storybook/testing-library": "^0.2.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "2.30.0",
     "dayjs": "^1.11.13",
     "react": "^18.2.0",
+    "react-datepicker": "^7.0.0",
     "react-dom": "^18.2.0"
   },
   "scripts": {
