【user-auth】ログイン認証、サインイン機能を追加

--- a/src/features/config.json
+++ b/src/features/config.json
@@ -14,8 +14,8 @@
       "popularity": "popularity/",
       "rating": "rating/",
       "search": "search/",
-      "logIn": "logIn/",
-      "createUser": "createUser/"
+      "login": "login",
+      "createUser": "createUser"
     }
   }
   
