【detail-page】詳細ページ追加、エラー対応

--- a/src/features/config.json
+++ b/src/features/config.json
@@ -14,6 +14,7 @@
       "popularity": "popularity/",
       "rating": "rating/",
       "search": "search/",
+      "detail": "detail/",
       "login": "login",
       "createUser": "createUser"
     }
