--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dayjs": "^1.11.13",
     "react": "^18.2.0",
     "react-datepicker": "^7.0.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
